# dimsim

./: .gitignore  AGENT_INSTRUCTIONS.md  Makefile  Makefile.am  Makefile.in  README.md  blueyos-cc  blueyos-cross.specs  config.h.in~  configure-blueyos  configure.ac  configure~  go.mod  go.sum
.github/: copilot-instructions.md
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
cmd/dimsim/: main.go
cmd/dpkbuild/: main.go
docs/: creating-a-package.md  offline-install.md  package-management.md  repository-setup.md
include/dimsim/: version.h.in
internal/cli/: commands.go  repo.go  root.go
internal/install/: firstboot.go  install.go  install_test.go
internal/pkg/: dpk.go  dpk_test.go  filesystem.go  manifest.go
internal/repo/: client.go  sign.go  tuf.go
internal/state/: db.go
internal/world/: world.go
src/: Makefile.am  Makefile.in  common.c  common.h  dimsim.c  dpkbuild.c  manifest.c  manifest.h  tar.c  tar.h
src/cli/: main.c
template/meta/: manifest.json
template/meta/scripts/: postinst  postrm  preinst  prerm
tzinfo/meta/: manifest.json
tzinfo/meta/scripts/: prerm
